test: 재추첨 fixture 멱등 키 격리
공유 DB의 잔존 요청과 충돌하지 않도록 테스트마다 UUID 멱등 키를 발급하고 nullable 파라미터 바인딩을 허용한다.